Move code to EventDefinitionHandler and add test